@@ -163,7 +163,7 @@ public class JeiScreenHandler<T extends Screen & IMuiScreen> extends RecipeViewe
         }
 
         private <I> I mapFirstIngredient(IngredientProvider<I> provider) {
-            return provider.renderMappingFunction().apply(provider.getIngredients().getStacks().get(0));
+            return provider.renderMappingFunction().apply(provider.getIngredients().getStacks().getFirst());
         }
 
         private <I> Optional<IClickableIngredient<I>> createClickableIngredient(I ingredient, Rectangle area) {
